# Calculator-Core

./: .gitignore  CMakeLists.txt  README.md  library.c  library.h
private/headers/: defines.h  functions.h  libstring.h  private.h  structures.h
private/source/: libstring.c  private.c  private.cpp
public/headers/: Core.h  structures.h  types.h
public/source/: Core.c  Core.cpp
publicHeaders/: Core.h  types.h
source/: Core.c
